# torchflux

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  index.html  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sitemap.xml  tailwind.config.js  tsconfig.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml  question.md
.github/workflows/: build.yml  docs.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_8f1d98162b4309e6___init___py.html  z_8f1d98162b4309e6_dashboard_py.html
docs/: code_of_conduct.md  contributing.md  index.md  license.md  reference.md
getting_started/: index.html
getting_started/usage/: index.html
license/: index.html
notebooks/: example.ipynb
reference/: index.html
requirements/: requirements-docs.txt  requirements-safety.txt  requirements-style.txt  requirements-test.txt  requirements-types.txt
search/: search_index.json
tests/: test_demo.py
torchflux/: __init__.py  dashboard.py
ui/: demoWidget.tsx  main.tsx  style.css  utils.tsx
